--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ p {
   /* margin-left: 344px; */
 }
 .header-tel-link {
-  /* paddin-right: 15px; */
+  padding-left: 50px;
 }
 
 .header-mail-link,
